# final_Pervenstvo

./: README.md  account_dumps.sql  docker-compose.yaml  nginx.conf
backend/account/: .env  Dockerfile  pyproject.toml
backend/account/src/: config.py  dependencies.py  main.py
backend/account/src/app/: __init__.py
backend/account/src/rabbitMq/: server.py
backend/events/: .env  Dockerfile  pyproject.toml
backend/events/src/: base_dao.py  config.py  dependencies.py  main.py
backend/events/src/alembic/: env.py
backend/events/src/app/: __init__.py
backend/events/src/parser/: parser.py
backend/events/src/rabbitMq/: district.py
backend/notification/: .env  .env.example  Dockerfile  pyproject.toml
backend/notification/src/: config.py  main.py  service.py
backend/notification/src/templates/: confirm.html  mail.html
dumps/: accounts.sql  events.sql  notification.sql  tmp.sql
frontend/: middleware.js  next.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.jsx  page.jsx
frontend/app/api/: UserAct.jsx  fetchEventData.jsx
frontend/app/auth/: page.jsx
frontend/app/authorization/login/: page.jsx
frontend/app/calendar/: page.jsx
frontend/app/confirm/[id]/: page.jsx
frontend/app/event/: page.jsx
frontend/app/eventforadmin/: page.jsx
frontend/app/eventforall/: page.jsx
frontend/app/eventforsuperadmin/: page.jsx
frontend/app/personal/: ClientComponent.jsx  page.jsx
frontend/app/profile/: ProfileClientComponent.jsx  page.jsx
frontend/app/reg/: page.jsx
frontend/app/regions/: page.jsx
(+27 files in other folders)
